Fix PianoRoll shader resource packaging

--- a/src/ui/qt/CMakeLists.txt
+++ b/src/ui/qt/CMakeLists.txt
@@ -162,6 +162,14 @@ qt_add_shaders(
     workarea/hexview/shaders/hexedge.vert
     workarea/hexview/shaders/hexedge.frag
     workarea/hexview/shaders/hexcomposite.frag
+)
+
+qt_add_shaders(
+  vgmtrans
+  "pianoroll_shaders"
+  PREFIX "/shaders"
+  BASE "workarea/pianorollview/shaders"
+  FILES
     workarea/pianorollview/shaders/pianorollquad.vert
     workarea/pianorollview/shaders/pianorollquad.frag
 )
