VGMTransQt: Bug report dialog

--- a/src/ui/qt/CMakeLists.txt
+++ b/src/ui/qt/CMakeLists.txt
@@ -57,6 +57,8 @@ add_executable(
   MenuBar.h
   QtVGMRoot.cpp
   QtVGMRoot.h
+  ReportDialog.cpp
+  ReportDialog.h
   SequencePlayer.cpp
   SequencePlayer.h
   main_ui.cpp
