Share RHI window drag/drop handling across views

--- a/src/ui/qt/CMakeLists.txt
+++ b/src/ui/qt/CMakeLists.txt
@@ -130,6 +130,8 @@ add_executable(
   workarea/pianorollview/PianoRollView.h
   workarea/pianorollview/PianoRollZoomScrollBar.cpp
   workarea/pianorollview/PianoRollZoomScrollBar.h
+  workarea/rhi/RhiWindowMainWindowLocator.h
+  workarea/rhi/RhiWindowDragDropEvents.h
   workarea/rhi/SimpleRhiWindow.cpp
   workarea/rhi/SimpleRhiWindow.h
   workarea/RawFileListView.cpp
