meta: Add a few utility items to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -208,3 +208,9 @@ compile_commands.json
 # Python environment
 .venv/
 __pycache__/
+
+# Miscellaneous, development-specific files
+junk/
+*.mid
+*.dls
+*.sf2
