VGMTransQt: Workaround Qt/macOS bug for opening URLs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ cmake_minimum_required(VERSION 3.21)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_OBJCXX_STANDARD 20)
 add_compile_definitions($<$<NOT:$<CONFIG:Debug>>:NDEBUG>)
 
 # Use ccache if present on the system
